--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          REPOSITORY: reg-app-repository
+          REPOSITORY: ecsbygithubactions
         run: |
           # Build a docker container and
           # push it to ECR so that it can
